crates/solidity-v2/testing/snapshots/diagnostics_output/compilation/unresolved_import/generated/solc/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Source "oops.sol" not found: File not found. Searched the following locations: "".
   ╭─[input.sol:5:1]
   │
 5 │ import "../../oops.sol";
   │ ────────────┬───────────  
   │             ╰───────────── Error occurred here.
───╯
